deploy/v1_namespace_jobflow-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: controller-manager
  name: jobflow-system
