deploy/v1_service_jobflow-controller-manager-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: controller-manager
  name: jobflow-controller-manager-metrics-service
  namespace: jobflow-system
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    control-plane: controller-manager
