deploy/v1_service_jobflow-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobflow-webhook-service
  namespace: kube-system
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    control-plane: controller-manager
