deploy/admissionregistration.k8s.io_v1_mutatingwebhookconfiguration_jobflow-mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: kube-system/jobflow-serving-cert
  name: jobflow-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1alpha1
  clientConfig:
    service:
      name: jobflow-webhook-service
      namespace: kube-system
      path: /mutate-batch-volcano-sh-v1alpha1-jobflow
  failurePolicy: Fail
  name: mjobflow.kb.io
  rules:
  - apiGroups:
    - batch.volcano.sh
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - jobflows
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1alpha1
  clientConfig:
    service:
      name: jobflow-webhook-service
      namespace: kube-system
      path: /mutate-batch-volcano-sh-v1alpha1-jobtemplate
  failurePolicy: Fail
  name: mjobtemplate.kb.io
  rules:
  - apiGroups:
    - batch.volcano.sh
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - jobtemplates
  sideEffects: None
