deploy/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_jobflow-validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: jobflow-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1alpha1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURSVENDQWkyZ0F3SUJBZ0lVRVVJaXJ0R05KS1FzMGZldXFPMExRRFlvSzN3d0RRWUpLb1pJaHZjTkFRRUwKQlFBd01qRXdNQzRHQTFVRUF3d25hbTlpWm14dmR5MTNaV0pvYjI5ckxYTmxjblpwWTJVdWEzVmlaUzF6ZVhOMApaVzB1YzNaak1CNFhEVEl4TVRJeU1ERXdNamN6TmxvWERUTXhNVEl4T0RFd01qY3pObG93TWpFd01DNEdBMVVFCkF3d25hbTlpWm14dmR5MTNaV0pvYjI5ckxYTmxjblpwWTJVdWEzVmlaUzF6ZVhOMFpXMHVjM1pqTUlJQklqQU4KQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBelg5Q09NUk8xMUF6aCt2eEYrOHVrK2IyUjVqcgpLZ014TmcrNDVONk [...]
    service:
      name: jobflow-webhook-service
      namespace: kube-system
      path: /validate-batch-volcano-sh-v1alpha1-jobtemplate
  failurePolicy: Fail
  name: vjobtemplate.kb.io
  rules:
  - apiGroups:
    - batch.volcano.sh
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - jobtemplates
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1alpha1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURSVENDQWkyZ0F3SUJBZ0lVRVVJaXJ0R05KS1FzMGZldXFPMExRRFlvSzN3d0RRWUpLb1pJaHZjTkFRRUwKQlFBd01qRXdNQzRHQTFVRUF3d25hbTlpWm14dmR5MTNaV0pvYjI5ckxYTmxjblpwWTJVdWEzVmlaUzF6ZVhOMApaVzB1YzNaak1CNFhEVEl4TVRJeU1ERXdNamN6TmxvWERUTXhNVEl4T0RFd01qY3pObG93TWpFd01DNEdBMVVFCkF3d25hbTlpWm14dmR5MTNaV0pvYjI5ckxYTmxjblpwWTJVdWEzVmlaUzF6ZVhOMFpXMHVjM1pqTUlJQklqQU4KQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBelg5Q09NUk8xMUF6aCt2eEYrOHVrK2IyUjVqcgpLZ014TmcrNDVONk [...]
    service:
      name: jobflow-webhook-service
      namespace: kube-system
      path: /validate-batch-volcano-sh-v1alpha1-jobflow
  failurePolicy: Fail
  name: vjobflow.kb.io
  rules:
  - apiGroups:
    - batch.volcano.sh
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - jobflows
  sideEffects: None
